PageRank via Adjacency matrix